WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306652
[threaded-animations] WPT test `scroll-animations/view-timelines/timeline-offset-in-keyframe.html` crashes with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=306652
Summary
[threaded-animations] WPT test `scroll-animations/view-timelines/timeline-off...
Antoine Quint
Reported
2026-01-30 14:06:40 PST
The WPT test `scroll-animations/view-timelines/timeline-offset-in-keyframe.html` crashes with "Threaded Time-based Animations" enabled. This is due to failing `ASSERT(!std::isnan(srcKeyframe.offset()))` in the `AcceleratedEffect` constructor.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-30 14:06:52 PST
<
rdar://problem/169304641
>
Antoine Quint
Comment 2
2026-01-30 14:14:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57586
EWS
Comment 3
2026-01-30 23:40:41 PST
Committed
306553@main
(9b966716d8fa): <
https://commits.webkit.org/306553@main
> Reviewed commits have been landed. Closing PR #57586 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug